--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
             </objects>
             <point key="canvasLocation" x="1713.0434782608697" y="-677.00892857142856"/>
         </scene>
-        <!--Favourites Table View Controller-->
+        <!--Избранное-->
         <scene sceneID="UIB-h5-BkU">
             <objects>
                 <tableViewController id="xyZ-vy-ghy" customClass="FavouritesTableViewController" customModule="Grains" customModuleProvider="target" sceneMemberID="viewController">
@@ -138,7 +138,7 @@
                             <outlet property="delegate" destination="xyZ-vy-ghy" id="MRh-j7-lgg"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="vAh-zD-BC3"/>
+                    <navigationItem key="navigationItem" title="Избранное" largeTitleDisplayMode="never" id="vAh-zD-BC3"/>
                     <connections>
                         <outlet property="backgroundImgOut" destination="MMw-OS-IeP" id="OdO-CX-eDI"/>
                         <outlet property="emptyView" destination="WMO-HB-pIk" id="d5r-uQ-FDN"/>
@@ -229,7 +229,7 @@
                                                             <attributedString key="attributedTitle">
                                                                 <fragment content=" ">
                                                                     <attributes>
-                                                                        <font key="NSFont" metaFont="message" size="11"/>
+                                                                        <font key="NSFont" metaFont="label" size="11"/>
                                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                                     </attributes>
                                                                 </fragment>
@@ -452,18 +452,27 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                 <state key="normal" title="Поделиться с друзьями"/>
+                                <connections>
+                                    <action selector="shareButtonAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="6Hg-ir-gfJ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KB5-hf-gzE">
                                 <rect key="frame" x="0.0" y="341" width="414" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                 <state key="normal" title="    Купить полную версию"/>
+                                <connections>
+                                    <action selector="purchaseFullVersion:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="nbg-DR-VZy"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQ1-oW-SWN">
                                 <rect key="frame" x="0.0" y="486" width="414" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                 <state key="normal" title="Написать разработчику"/>
+                                <connections>
+                                    <action selector="wtiteToDeveloperButtAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="gnf-fL-7NN"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Единицы измерения" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZf-xe-FBM">
                                 <rect key="frame" x="0.0" y="593" width="414" height="66"/>
@@ -480,6 +489,9 @@
                                     <segment title="Фунты"/>
                                     <segment title="Пропорции"/>
                                 </segments>
+                                <connections>
+                                    <action selector="selectMeasuteSCAction:" destination="LQx-Pu-WCy" eventType="valueChanged" id="zS0-F0-O9N"/>
+                                </connections>
                             </segmentedControl>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="measures 3" translatesAutoresizingMaskIntoConstraints="NO" id="1cc-Zg-Cde">
                                 <rect key="frame" x="20" y="597" width="67" height="58"/>
@@ -505,6 +517,9 @@
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                     <color key="titleShadowColor" red="0.73333333333333328" green="0.60392156862745094" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="rateAppButtonAction:" destination="LQx-Pu-WCy" eventType="touchUpInside" id="JIp-tt-Akb"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rateApp 4" translatesAutoresizingMaskIntoConstraints="NO" id="tx4-Sa-H1D">
                                 <rect key="frame" x="20" y="263" width="67" height="58"/>
@@ -516,6 +531,9 @@
                         <viewLayoutGuide key="safeArea" id="pWy-Vw-z4m"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="Rqd-MG-eWY"/>
+                    <connections>
+                        <outlet property="mesuresSCOutlet" destination="w0X-1n-Oy5" id="GSu-i0-QdB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wEL-ZE-NPg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
